--- a/public/bro.html
+++ b/public/bro.html
@@ -9,7 +9,15 @@
     </p>
     <hr />
     <div>
-      <%= yield %>
+      <ul>
+	
+	<li> Where are my thing </li>
+	
+	<li> Where are my thingies </li>
+	
+	<li> Where are my things </li>
+	
+</ul>
     </div>
     <hr />
     <div>
