--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,18 @@
-<h1> Hello</h1>
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2012-06-16 16:00:08 -0500
+  Fri Aug 31 13:35:07 -0400 2012
 </p>
 
 <p>
@@ -9,3 +20,12 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p><a href="http://google.com">how about a bit of google?</a> </p>
+    </div>
+  </body>
+</html>
